--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,4 @@
-# Ignore all files and directories
 *
-
-# Include .gitignore
-!.gitignore
-
-# Include main.py
 !main.py
-
-# Include tasks.tmpl
-!tasks.tmpl
+!.gitignore
+!task.tmpl
